-issue#5182: Graph Image does not have check for Remote Agent
-issue#5184: Cacti permission checks generate SQL errors is the user has been deleted
-issue#5185: Repair Database does not prune old Poller Item Records
-issue#5187: Getting SQL errors in the Cacti due to plugin calling register function in wrong location
-issue#5190: When using Gradient Support GPRINT Text Format is misaligned

1.2.23
-security#4920: Add .htaccess file to scripts folder
-security#5119: CVE-2022-46169 Unauthenticated Command Injection in Remote Agent
-issue#4418: When using Single Sign-on Frameworks, revocation is not always detected in callbacks
-issue#4682: New templates are not installed during the update
-issue#4738: Improve PHP 8.1 support for Installer CLI
-issue#4888: The database audit script fails to run properly on MySQL 8.0.29
-issue#4889: Increase host query performance by removing check for NULL
-issue#4892: When many hosts go offline, Recache Event can be constantly logged
-issue#4893: Real Time Counter can become stuck and does not count down
-issue#4896: When remote poller is in offline mode, GUI can become inaccesible and poller can timeout
-issue#4897: Technical support page on remote poller shows max connections of Main poller
-issue#4903: Correct incompatibility between MySQL 8.x and Automation regular expressions
-issue#4904: The recommendation for innodb_buffer_pool_instances is incorrect for MySQL 8 and MariaDB < 10.5
-issue#4905: Using colons in labels can break graphs with gradients
-issue#4917: Real Time Counter can become stuck and does not count down
-issue#4921: Some Aggregate graphs can be denied access incorrectly
-issue#4923: Unable to duplicate a Graph template
-issue#4927: Unable to audit the database if database password contains a bracket
-issue#4934: Upgrade phpseclib to 2.0.37
-issue#4935: The 'Net-SNMP - Device I/O' template incorrectly sets a maximum value of zero
-issue#4940: When sorting by hostname, database errors can be reported